<resources>
    <string name="app_name">redTaller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_actuaciones">Actuaciones</string>
    <string name="menu_talleres">Talleres</string>
    <string name="menu_slideshow">Acercade</string>
    <string name="redtaller">redTaller</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>

    <string name="acerca_de_texto">
    Aplicación desarrollada con fines académicos para el módulo de Proyecto Final del ciclo formativo de Grado Superior de Desarrollo de Aplicaciones Multiplataforma.\n\n
    Desarrollada por:\n\n
    José Luis Izquierdo Barberán\n
    <a href="mailto:jlizquierdo@jlizquierdo.com">jlizquierdo@jlizquierdo.com</a>
</string>

</resources>