<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_actuaciones">

    <fragment
        android:id="@+id/nav_actuaciones"
        android:name="com.jlizquierdo.redtaller.ui.actuaciones.ActuacionFragment"
        android:label="@string/menu_actuaciones"
        tools:layout="@layout/fragment_actuacion" />

    <fragment
        android:id="@+id/nav_talleres"
        android:name="com.jlizquierdo.redtaller.ui.talleres.TalleresFragment"
        android:label="@string/menu_talleres"
        tools:layout="@layout/fragment_talleres" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jlizquierdo.redtaller.ui.acercade.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>